# polymarket_monitor

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 4d4427e60319_create_markets_table.py
app/: main.py
app/api/: polymarket.py
app/config/: settings.py
app/core/: logger.py
app/database/: base.py  health.py  session.py
app/models/: __init__.py  market.py
app/polymarket/: __init__.py  client.py  endpoints.py  exceptions.py  models.py
