[project]
name = "polymarket-monitor"
version = "0.1.0"
description = "Polymarket Monitoring Platform"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.41",
    "asyncpg>=0.30.0",
    "alembic>=1.16.4",
    "httpx>=0.28.1",
    "apscheduler>=3.11.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "python-telegram-bot>=22.3",
    "greenlet>=3.5.3",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.4",
    "black>=25.1.0",
]
